--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -1,6 +1,103 @@
-# GitHub Actions already in .github/workflows/azure.yml → just push to main
-# Local deployment
-docker-compose up --build
+name: Build and Deploy to Azure
 
-# Azure one-click (after first setup)
-az webapp up --name jacklimited-portal --resource-group JackLimitedRG --sku B1
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+env:
+  AZURE_WEBAPP_NAME: jacklimited-portal
+  AZURE_RESOURCE_GROUP: JackLimitedRG
+
+jobs:
+  build-and-test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '10.0.x'
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
+        cache-dependency-path: frontend/package-lock.json
+
+    - name: Install frontend dependencies
+      run: |
+        cd frontend
+        npm ci
+
+    - name: Build frontend
+      run: |
+        cd frontend
+        npm run build
+
+    - name: Restore backend dependencies
+      run: |
+        cd src/backend/JackLimited.Api
+        dotnet restore
+
+    - name: Build backend
+      run: |
+        cd src/backend/JackLimited.Api
+        dotnet build --configuration Release --no-restore
+
+    - name: Run backend tests
+      run: |
+        cd src/backend/JackLimited.Tests
+        dotnet test --configuration Release --no-build --verbosity normal
+
+    - name: Install Playwright browsers
+      run: |
+        cd frontend
+        npx playwright install --with-deps
+
+    - name: Run Playwright tests
+      run: |
+        cd frontend
+        npm run test:e2e
+
+    - name: Publish backend
+      run: |
+        cd src/backend/JackLimited.Api
+        dotnet publish --configuration Release --output ./publish
+
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-artifacts
+        path: |
+          frontend/dist/
+          src/backend/JackLimited.Api/publish/
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+
+    steps:
+    - name: Download build artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: build-artifacts
+        path: artifacts/
+
+    - name: Login to Azure
+      uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v3
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        resource-group: ${{ env.AZURE_RESOURCE_GROUP }}
+        package: artifacts/
