fix: Correct resource group parameter in Azure deployment workflow and update TypeScript configuration for improved compatibility

--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -99,5 +99,5 @@ jobs:
       uses: azure/webapps-deploy@v3
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        resource-group: ${{ env.AZURE_RESOURCE_GROUP }}
+        resource-group-name: ${{ env.AZURE_RESOURCE_GROUP }}
         package: artifacts/
