feat: Implement IP-based rate limiting and add security headers for enhanced API protection

--- a/src/backend/JackLimited.Api/appsettings.Production.json
+++ b/src/backend/JackLimited.Api/appsettings.Production.json
@@ -1,18 +1,19 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Error"
     }
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "jacklimited-portal.azurewebsites.net",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=JackLimited;Username=postgres;Password=password"
+    "DefaultConnection": "Host=your-postgres-server.postgres.database.azure.com;Database=JackLimited;Username=your-username;Password=your-password;SSL Mode=Require;Trust Server Certificate=true"
   },
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
     "StackBlockedRequests": false,
-    "RealIpHeader": "X-Real-IP",
+    "RealIpHeader": "X-Forwarded-For",
     "ClientIdHeader": "X-ClientId",
     "HttpStatusCode": 429,
     "IpWhitelist": [],
@@ -22,17 +23,17 @@
       {
         "Endpoint": "*",
         "Period": "1m",
-        "Limit": 10
+        "Limit": 100
       },
       {
         "Endpoint": "POST:/api/survey",
         "Period": "1h",
-        "Limit": 5
+        "Limit": 20
       },
       {
         "Endpoint": "GET:/api/survey/*",
         "Period": "1m",
-        "Limit": 30
+        "Limit": 200
       }
     ]
   }
