--- a/src/backend/JackLimited.Api/JackLimited.Api.csproj
+++ b/src/backend/JackLimited.Api/JackLimited.Api.csproj
@@ -7,8 +7,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
