feat: Implement testing API key and enhance input validation for survey submissions

--- a/src/backend/JackLimited.Application/JackLimited.Application.csproj
+++ b/src/backend/JackLimited.Application/JackLimited.Application.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="FluentValidation" Version="12.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../JackLimited.Domain/JackLimited.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
