--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,8 +35,8 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.39.1",
-    "eslint-plugin-playwright": "^2.3.0",
-    "eslint-plugin-vue": "~10.5.1",
+    "eslint-plugin-playwright": "^2.4.0",
+    "eslint-plugin-vue": "^10.6.2",
     "jiti": "^2.6.1",
     "jsdom": "^27.2.0",
     "npm-run-all2": "^8.0.4",
