fix: Remove unnecessary flag from frontend unit test command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
           CI: true
 
       - name: Frontend unit tests
-        run: npm run test:unit -- --runInBand
+        run: npm run test:unit
         working-directory: frontend
         env:
           CI: true
