feat: implement PostgreSQL support with Docker and EF Core migrations

--- a/src/backend/JackLimited.Api/appsettings.Production.json
+++ b/src/backend/JackLimited.Api/appsettings.Production.json
@@ -6,10 +6,7 @@
       "Microsoft.EntityFrameworkCore": "Error"
     }
   },
-  "AllowedHosts": "jacklimited-portal.azurewebsites.net",
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=your-postgres-server.postgres.database.azure.com;Database=JackLimited;Username=your-username;Password=your-password;SSL Mode=Require;Trust Server Certificate=true"
-  },
+  "AllowedHosts": "*",
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
     "StackBlockedRequests": false,
