feat: Implement comprehensive TDD/BDD testing strategy for Docker containers
- Added a new testing strategy document outlining TDD/BDD principles for Docker container validation.
- Created a feature file for Docker container scenarios, including startup, API functionality, frontend serving, and error handling.
- Introduced a new test script for Docker container testing, covering health checks, API endpoints, survey submissions, and performance.
- Updated CI workflow to include Docker container tests and install necessary dependencies.
- Removed unnecessary Docker Compose versioning from docker-compose.yml.
- Enhanced the test-docker-image.sh script to include detailed logging and structured test execution.
- Updated package.json to include new test scripts for Docker testing.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,8 +59,13 @@ jobs:
         env:
           CI: true
 
-      - name: Docker build
-        run: docker build -t jacklimited:ci .
+      - name: Install jq for JSON parsing
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Docker container tests
+        run: |
+          chmod +x test-docker-image.sh
+          ./test-docker-image.sh
 
       - name: Run Trivy scan
         run: docker run --rm -v /var/run/docker.sock:/var/run/docker.sock ghcr.io/aquasecurity/trivy:latest image jacklimited:ci --format table --exit-code 1 --severity HIGH,CRITICAL
