Add runbooks for analytics latency, dashboard availability, database connectivity, and survey submission failures
- Created runbooks to guide incident response for analytics latency degradation, dashboard availability drops, database connectivity failures, and survey submission failures.
- Implemented telemetry tracking for API calls in the frontend using Application Insights.
- Enhanced backend observability with OpenTelemetry, including metrics for survey submissions and analytics requests.
- Updated application settings for OpenTelemetry configuration in development and production environments.
- Added health checks for database connectivity and improved error handling in API endpoints.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "lint": "eslint . --fix --cache"
   },
   "dependencies": {
+    "@microsoft/applicationinsights-web": "^3.0.2",
     "chart.js": "^4.5.1",
     "lucide-vue-next": "^0.555.0",
     "pinia": "^3.0.4",
