Connect backend to Azure PostgreSQL database

--- a/src/backend/JackLimited.Api/appsettings.json
+++ b/src/backend/JackLimited.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=JackLimited;Username=postgres;Password=password"
+    "DefaultConnection": "Host=jacklimited-postgres-dev.postgres.database.azure.com;Database=jacklimiteddb;Username=jackadmin@jacklimited-postgres-dev;Password=YourSecurePassword123!;SslMode=Require"
   },
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
