--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,7 @@ stages:
               versionSpec: '20.x'
           - script: |
               cd frontend
+              export VITE_API_BASE_URL=https://jacklimited-api.azurewebsites.net
               npm ci
               npm run build
             displayName: Build Frontend
