Remove obsolete configuration and settings files from the JackLimited.Api publish directory
- Deleted runtime configuration file (JackLimited.Api.runtimeconfig.json)
- Removed static web assets endpoints file (JackLimited.Api.staticwebassets.endpoints.json)
- Eliminated development appsettings file (appsettings.Development.json)
- Removed production appsettings file (appsettings.Production.json)
- Deleted main appsettings file (appsettings.json)
- Removed web.config files from both publish directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # .NET
 bin/
 obj/
+publish/
+**/publish/
+deployments/
+**/deployments/
+LogFiles/
+**/LogFiles/
 *.user
 *.suo
 *.cache
@@ -161,5 +167,7 @@ coverage/
 .fake
 frontend/*.zip
 *.zip
+logs.zip
+logs*.zip
 *.dll
 
